// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextAreaField should render the component correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex flex-col gap-y-0.5"
      >
        <label
          class="mb-0.5 text-sm"
          for="firstName"
        >
          Input text
        </label>
        <textarea
          class="w-full rounded-lg border border-gray-200 px-4 py-2 text-sm dark:border-white/30 focus:ring-primary/60 focus:border-primary/60 focus:ring-1 focus:outline-none dark:focus:border-white/65 dark:focus:ring-white/65 resize-none"
          cols="50"
          id="firstName"
          name="firstName"
          placeholder="Enter text..."
          rows="6"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex flex-col gap-y-0.5"
    >
      <label
        class="mb-0.5 text-sm"
        for="firstName"
      >
        Input text
      </label>
      <textarea
        class="w-full rounded-lg border border-gray-200 px-4 py-2 text-sm dark:border-white/30 focus:ring-primary/60 focus:border-primary/60 focus:ring-1 focus:outline-none dark:focus:border-white/65 dark:focus:ring-white/65 resize-none"
        cols="50"
        id="firstName"
        name="firstName"
        placeholder="Enter text..."
        rows="6"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TextAreaField should render the component correctly 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex flex-col gap-y-0.5"
      >
        <label
          class="mb-0.5 text-sm"
          for="firstName"
        >
          Input text
        </label>
        <textarea
          class="w-full rounded-lg border border-gray-200 px-4 py-2 text-sm dark:border-white/30 focus:ring-primary/60 focus:border-primary/60 focus:ring-1 focus:outline-none dark:focus:border-white/65 dark:focus:ring-white/65 resize-none"
          cols="50"
          id="firstName"
          name="firstName"
          placeholder="Enter text..."
          rows="6"
        />
      </div>
    </div>
    <div>
      <div
        class="flex flex-col gap-y-0.5"
      >
        <label
          class="mb-0.5 text-sm"
          for="firstName"
        >
          Input text
          <span
            class="text-rose-600"
          >
             *
          </span>
        </label>
        <textarea
          class="w-full rounded-lg border border-gray-200 px-4 py-2 text-sm dark:border-white/30 focus:ring-primary/60 focus:border-primary/60 focus:ring-1 focus:outline-none dark:focus:border-white/65 dark:focus:ring-white/65 resize-none"
          cols="50"
          id="firstName"
          name="firstName"
          placeholder="Enter text..."
          rows="6"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex flex-col gap-y-0.5"
    >
      <label
        class="mb-0.5 text-sm"
        for="firstName"
      >
        Input text
        <span
          class="text-rose-600"
        >
           *
        </span>
      </label>
      <textarea
        class="w-full rounded-lg border border-gray-200 px-4 py-2 text-sm dark:border-white/30 focus:ring-primary/60 focus:border-primary/60 focus:ring-1 focus:outline-none dark:focus:border-white/65 dark:focus:ring-white/65 resize-none"
        cols="50"
        id="firstName"
        name="firstName"
        placeholder="Enter text..."
        rows="6"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
